--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700,700italic,400italic);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=cyrillic-ext,latin,greek-ext,latin-ext,vietnamese);
 
 html {
   font-family: 'Roboto Slab', serif;
