feat(perf): more perf hacks

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -28,7 +28,6 @@ md-toolbar.md-default-theme {
 }
 
 section.jumbotron {
-  margin-bottom: 30px;
   padding: 1px 30px;
   background-color: #5aadbb;
   text-align: center;
@@ -43,6 +42,10 @@ section.jumbotron {
   .search {
     max-width: 300px;
     margin: 0 auto;
+  }
+
+  .md-raised {
+    margin: 0 10px;
   }
 }
 
